fixed mostly HTML tags

--- a/success/index.html
+++ b/success/index.html
@@ -16,5 +16,6 @@
             <meta http-equiv='refresh' content='10;url=/login-demo/login/'>
         </div>
     </div>
-    </div>
 </body>
+
+</html>
